--- a/css/index/global.css
+++ b/css/index/global.css
@@ -9,6 +9,18 @@ ul {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
+}
+
+button {
+    cursor: pointer;
+}
+
 .container {
     margin: 0 auto;
     max-width: 1300px;
